--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.2",
-    "@types/nprogress": "^0.2.0",
     "chrome-aws-lambda": "^5.2.1",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "fathom-client": "^3.0.0",
     "gray-matter": "4.0.2",
     "mdx-prism": "^0.3.1",
-    "next": "latest",
-    "next-mdx-remote": "^1.0.0",
+    "next": "10.0.7",
+    "next-mdx-remote": "2.1.3",
     "nprogress": "^0.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.1",
     "puppeteer-core": "^5.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rehype": "^11.0.0",
     "remark-external-links": "^8.0.0",
-    "typescript": "^3.9.2"
+    "typescript": "4.1.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.2.4",
     "globby": "^11.0.1",
     "next-seo": "^4.9.0",
+    "postcss": "^8.2.6",
     "reading-time": "^1.2.0",
-    "tailwindcss": "^1.8.7"
+    "tailwindcss": "^2.0.3"
   },
   "license": "MIT"
 }
