--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "fathom-client": "^3.0.0",
     "gray-matter": "4.0.2",
     "mdx-prism": "^0.3.1",
-    "next": "10.0.7",
+    "next": "^11.1.0",
     "next-mdx-remote": "2.1.3",
     "nprogress": "^0.2.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.1",
     "puppeteer-core": "^5.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rehype": "^11.0.0",
     "remark-external-links": "^8.0.0",
     "typescript": "4.1.5"
@@ -39,7 +38,8 @@
     "next-seo": "^4.9.0",
     "postcss": "^8.2.6",
     "reading-time": "^1.2.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "prettier": "^2.1.1"
   },
   "license": "MIT"
 }
