--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
     "chrome-aws-lambda": "^5.2.1",
-    "classnames": "2.2.6",
+    "classnames": "^2.3.1",
     "date-fns": "2.10.0",
     "fathom-client": "^3.0.0",
     "gray-matter": "4.0.2",
@@ -27,7 +27,6 @@
     "typescript": "4.1.5"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
     "@types/nprogress": "^0.2.0",
@@ -37,9 +36,9 @@
     "globby": "^11.0.1",
     "next-seo": "^4.9.0",
     "postcss": "^8.2.6",
+    "prettier": "^2.1.1",
     "reading-time": "^1.2.0",
-    "tailwindcss": "^2.0.3",
-    "prettier": "^2.1.1"
+    "tailwindcss": "^2.0.3"
   },
   "license": "MIT"
 }
