--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fathom-client": "^3.0.0",
     "gray-matter": "4.0.2",
     "mdx-prism": "^0.3.1",
-    "next": "^11.1.0",
+    "next": "^12.0.4",
     "next-mdx-remote": "2.1.3",
     "nprogress": "^0.2.0",
     "postcss-preset-env": "^6.7.0",
@@ -24,7 +24,7 @@
     "react-dom": "^17.0.2",
     "rehype": "^11.0.0",
     "remark-external-links": "^8.0.0",
-    "typescript": "4.1.5"
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/jest": "^25.2.2",
