--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.2.0",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/typography": "^0.5.0",
     "chrome-aws-lambda": "^5.2.1",
     "classnames": "^2.3.1",
     "date-fns": "2.10.0",
@@ -40,7 +41,7 @@
     "postcss": "^8.2.6",
     "prettier": "^2.1.1",
     "reading-time": "^1.2.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^3.0.2"
   },
   "license": "MIT"
 }
