--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mdx-prism": "^0.3.1",
     "next": "^12.0.7",
     "next-mdx-remote": "2.1.3",
+    "next-themes": "^0.0.15",
     "postcss-preset-env": "^6.7.0",
     "puppeteer-core": "^5.2.1",
     "react": "^17.0.2",
