--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "contentlayer": "^0.2.4",
     "date-fns": "2.10.0",
     "fathom-client": "^3.0.0",
-    "next": "^12.1.5",
+    "next": "^12.1.6",
     "next-contentlayer": "^0.2.4",
     "next-themes": "^0.1.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^7.5.0",
     "puppeteer-core": "^5.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/jest": "^25.2.2",
@@ -36,13 +36,13 @@
     "next-sitemap": "^1.6.203",
     "postcss": "^8.2.6",
     "prettier": "^2.1.1",
-    "tailwindcss": "^3.0.7",
     "reading-time": "^1.4.0",
     "rehype": "12.0.1",
     "rehype-autolink-headings": "6.1.1",
     "rehype-code-titles": "1.0.3",
     "rehype-prism-plus": "^1.3.1",
-    "rehype-slug": "5.0.1"
+    "rehype-slug": "5.0.1",
+    "tailwindcss": "^3.0.24"
   },
   "license": "MIT"
 }
