--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
+    "lint": "next lint",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -31,11 +32,14 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.4",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
     "globby": "^11.0.1",
     "next-seo": "^4.9.0",
     "next-sitemap": "^1.6.203",
     "postcss": "^8.2.6",
     "prettier": "^2.1.1",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "reading-time": "^1.4.0",
     "rehype": "12.0.1",
     "rehype-autolink-headings": "6.1.1",
