--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "next-contentlayer": "^0.2.4",
     "next-themes": "^0.2.0",
     "postcss-preset-env": "^7.5.0",
-    "puppeteer-core": "^5.2.1",
+    "puppeteer-core": "^14.1.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "typescript": "^4.6.4"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/jest": "^25.2.2",
@@ -46,7 +45,8 @@
     "rehype-code-titles": "1.0.3",
     "rehype-prism-plus": "^1.3.1",
     "rehype-slug": "5.0.1",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   },
   "license": "MIT"
 }
