--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/typography": "^0.5.7",
+    "@vercel/analytics": "^0.1.3",
     "chrome-aws-lambda": "^10.1.0",
     "classnames": "^2.3.1",
     "contentlayer": "^0.2.5",
     "date-fns": "2.28.0",
-    "next": "^12.3.0",
+    "next": "^13.0.2",
     "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
     "postcss-preset-env": "^7.7.0",
@@ -31,7 +32,7 @@
     "@types/react-dom": "^18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.0.2",
     "globby": "^13.1.1",
     "next-seo": "^5.4.0",
     "next-sitemap": "^3.0.3",
