--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/analytics": "^0.1.3",
-    "chrome-aws-lambda": "^10.1.0",
+    "@vercel/og": "^0.0.17",
     "classnames": "^2.3.1",
-    "contentlayer": "^0.2.5",
+    "contentlayer": "^0.2.8",
     "date-fns": "2.28.0",
     "next": "^13.0.2",
     "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
     "postcss-preset-env": "^7.7.0",
-    "puppeteer-core": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
