--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^1.0.6",
+    "@mapbox/rehype-prism": "^0.8.0",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/analytics": "^0.1.3",
     "@vercel/og": "^0.0.17",
     "classnames": "^2.3.1",
+    "clsx": "^1.2.1",
     "contentlayer": "^0.2.8",
     "date-fns": "2.28.0",
+    "focus-visible": "^5.2.0",
+    "framer-motion": "^8.0.2",
     "next": "^13.0.2",
     "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
+    "postcss-focus-visible": "^6.0.4",
     "postcss-preset-env": "^7.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
