--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx}",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/jest": "^28.1.0",
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
