--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^1.0.6",
     "@mapbox/rehype-prism": "^0.8.0",
+    "@next/font": "^13.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/analytics": "^0.1.3",
     "@vercel/og": "^0.0.17",
