--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "@heroicons/react": "^1.0.6",
     "@mapbox/rehype-prism": "^0.8.0",
     "@next/font": "^13.1.1",
+    "@notionhq/client": "^2.2.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/prismjs": "^1.26.0",
     "@vercel/analytics": "^0.1.3",
     "@vercel/og": "^0.0.17",
     "classnames": "^2.3.1",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.2.8",
     "date-fns": "2.28.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^8.0.2",
     "next": "^13.1.1",
-    "next-contentlayer": "^0.2.5",
     "next-themes": "^0.2.0",
+    "plaiceholder": "^2.5.0",
     "postcss-focus-visible": "^6.0.4",
     "postcss-preset-env": "^7.7.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -47,12 +50,6 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "reading-time": "^1.5.0",
-    "rehype": "12.0.1",
-    "rehype-autolink-headings": "6.1.1",
-    "rehype-code-titles": "1.0.3",
-    "rehype-prism-plus": "^1.4.0",
-    "rehype-slug": "5.0.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.2"
   },
