--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rss": "^1.2.2",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "@types/rss": "^0.0.29",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "^13.0.2",
