--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "date-fns": "2.30.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.2",
+    "geist": "^1.0.0",
+    "next": "^14.0.1",
     "next-themes": "^0.2.0",
     "plaiceholder": "^3.0.0",
     "postcss-focus-visible": "^9.0.0",
